--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
             <nav>
                 <ul>
                     <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-                    <li><a href="../about/index.html" target="_blank">About</a></li>
+                    <li><a href="index.html" target="_blank">About</a></li>
                 </ul>
             </nav>
         </div>
@@ -40,7 +40,7 @@
 
   <main>
 
-        <section class="mission-area">
+        <section class="mission">
             <div class="content-wrapper">
                 <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
                 <div class="mission-content">
