--- a/faq/index.html
+++ b/faq/index.html
@@ -26,27 +26,49 @@
   <header>
       <div class="content-wrapper">
         <figure>
-          <a href="#"><img src="" alt="unplugged logo"></a>
+          <a href="#">
+              <img src="" alt="unplugged logo">
+          </a>
         </figure>
-          <h2>unplugged</h2>
           <div class="header-divider"></div>
           <nav>
               <ul>
-                  <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-                  <li><a href="about/index.html" target="_blank">About</a></li>
+                  <li><a href="index.html" target="_blank">FAQ</a></li>
+                  <li><a href="../about/index.html" target="_blank">About</a></li>
               </ul>
           </nav>
       </div>
   </header>
 
-  <main>
-
-      <section>
-      </section>
-    
-      <aside>
-      </aside>
-    
+  <main class="faq">
+            <div class="content-wrapper">
+                <h2>Frequently Asked Questions</h2>
+                <div class="faq-content">
+                    <h4>How do I get to the Unplugged retreat?</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                        elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Quis ipsum suspendisse ultrices
+                        gravida.</p>
+                </div>
+                <div class="faq-content">
+                    <h4>What size teams can you accomodate?</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                        elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua.</p>
+                </div>
+                <div class="faq-content">
+                    <h4>What kind of team is right for the Unplugged Retreat?</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                        elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua.</p>
+                </div>
+                <div class="faq-content">
+                    <h4>Is there really no wifi available?</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                        elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua.</p>
+                </div>
+            </div> 
   </main> <!-- main wrapper -->
 
   <footer>
