--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                     <img src="" alt="unplugged logo">
                 </a>
                 <div class="header-divider"></div>
-                <nav>
-                    <ul>
-                        <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-                        <li><a href="about/index.html" target="_blank">About</a></li>
-                    </ul>
-                </nav>
+                    <nav>
+                        <ul>
+                            <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+                            <li><a href="about/index.html" target="_blank">About</a></li>
+                        </ul>
+                    </nav>
             </div>
       </header>
     
@@ -121,7 +121,6 @@
                         hello@unplugged.com
                         </p>
                   </address>
-              </div>
                   <div class="social">
                       <h4>Social</h4>
                       <div class="social-icons">
@@ -139,7 +138,8 @@
               </div> <!-- footer content ends-->
           </div> <!--footer content-wrapper ends-->
 
-          <div class="copyright"><p>Copyright 2019 | Unplugged</p>
+          <div class="copyright">
+              <p>Copyright 2019 | Unplugged</p>
           </div>
       </footer>
 
