--- a/faq/index.html
+++ b/faq/index.html
@@ -49,13 +49,13 @@
                         gravida.</p>
                 </div>
                 <div class="faq-content">
-                    <h4>What size teams can you accomodate?</h4>
+                    <h4>What kind of team is right for the Unplugged retreat?</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
                         elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua.</p>
+                        dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                 </div>
                 <div class="faq-content">
-                    <h4>What kind of team is right for the Unplugged Retreat?</h4>
+                    <h4>What size teams can you accommodate?</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
                         elit, sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua.</p>
@@ -64,7 +64,7 @@
                     <h4>Is there really no wifi available?</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
                         elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua.</p>
+                        dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                 </div>
             </div> 
   </main> <!-- main wrapper -->
@@ -80,7 +80,7 @@
                 </p>
               </address>
               <div class="social">
-                  <h3>Social</h3>
+                  <h4>Social</h4>
                   <div class="social-icons">
                         <p>
                                 <a href="https://www.facebook.com/nevada.winkler" target="_blank"></a>
