--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <section class="features">
                 <div class="content-wrapper">
-                    <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+                    <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
                     <div class="features-items">
                         <article>
                             <p class="fontawesome-icon"></p>
@@ -70,7 +70,7 @@
                         </article>
                         <article>
                             <p class="fontawesome-icon"></p>
-                            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakfast rooms.</p>
+                            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
                         </article>
                         <article>
                             <p class="fontawesome-icon"></p>
@@ -78,7 +78,7 @@
                         </article>
                         <article>
                             <p class="fontawesome-icon"></p>
-                            <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+                            <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
                         </article>
                         <article>
                             <p class="fontawesome-icon"></p>
