--- a/about/index.html
+++ b/about/index.html
@@ -58,7 +58,7 @@
 
         <section class ="map">
             <figure src=" " alt="Map">
-                
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2937.0859628808876!2d-88.4264803849866!3d42.595919628167174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058bbef1e33f19%3A0xa9e28adaef1aa0be!2s333+Main+St%2C+Lake+Geneva%2C+WI+53147%2C+USA!5e0!3m2!1sen!2suk!4v1552142479388" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </figure>
         </section>
 
