--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
                       <h4>Social</h4>
                       <div class="social-icons">
                           <p>
-                              <a href="https://www.facebook.com/nevada.winkler" target="_blank"></a>
+                              <a href="https://www.facebook.com/nevada.winkler" target="_blank"><i class="fab fa-facebook"></i></a>
                           </p>
                           <p>
-                              <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+                              <a href="https://twitter.com/Skillcrush" target="_blank"><i class="fab fa-twitter"></i></a>
                           </p>
                           <p>
-                              <a href="https://www.instagram.com/nevadawinkler/?hl=en" target="_blank"></a>
+                              <a href="https://www.instagram.com/nevadawinkler/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
                           </p>
                       </div>
                   </div>
