--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@
                 <address class="contact-content">
                     <div>
                         <h4>General Information</h4>
-                        <p>333 Main St, Lake Geneva, Wi, 53147<br>
+                        <p>333 Main St, Lake Geneva, WI 53147<br>
                            555-555-5555<br>
                            hello@unplugged.com   
                         </p>
@@ -102,7 +102,7 @@
                     <h4>Social</h4>
                     <div class="social-icons">
                         <p>
-                            <a href="https://www.facebook.com/nevada.winkler" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/nevada.winkler" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         </p>
                         <p>
                             <a href="https://twitter.com/Skillcrush" target="_blank"><i class="fab fa-twitter"></i></a>
